# cmake-gtest-template

./: CMakeLists.txt
example/: main.c
include/: mpu6050.h
lib/: CMakeLists.txt  i2c.c
lib/include/: debug.h  i2c.h
src/: mpu6050.c
test/: CMakeLists.txt  TestFixture.cpp  first_test.cpp
test/include/: Bcm2835Mock.h  TestFixture.h
test/mocks/: Bcm2835Mock.cpp  CMakeLists.txt
